--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,6 +61,7 @@
       <li><a routerLink="/formGroup" routerLinkActive="active">Form Group</a></li>
       <li><a routerLink="/formBuilder" routerLinkActive="active">Form Builder</a></li>
       <li><a routerLink="/ngForm" routerLinkActive="active">NG Form</a></li>
+      <li><a routerLink="/post" routerLinkActive="active">Post List</a></li>
     </ul>
   </nav>
 </div>
