--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,7 +1,16 @@
-<p>post works!</p>
-<div>
-  <div *ngFor="let post of posts">
+<div class="container">
+<!--  <div *ngFor="let post of posts">
     <strong>{{post.title}}</strong>
     <div>{{post.body}}</div>
-  </div>
+  </div>-->
+<!--  <label for="user"> Select User
+    <select id="user" name="user">
+        <option *ngFor="let user of users" value="{{user.id}}">{{user.username}}</option>
+    </select>
+  </label>-->
+  <label for="user"> Select User
+    <select id="user" name="user">
+      <option *ngFor="let user of users" [ngValue]="user.id">{{user.username}}</option>
+    </select>
+  </label>
 </div>
